// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file list snapshots > base only 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
]
`;

exports[`file list snapshots > cdk 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/bin/app.ts",
  "infra/cdk.json",
  "infra/lib/app-stack.ts",
  "infra/package.json",
  "infra/test/app.test.ts",
  "infra/tsconfig.json",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > cloudformation (ts) 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/template.yaml",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > full config 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "index.html",
  "infra/bin/app.ts",
  "infra/cdk.json",
  "infra/lib/app-stack.ts",
  "infra/package.json",
  "infra/test/app.test.ts",
  "infra/tsconfig.json",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/App.css",
  "src/App.tsx",
  "src/index.ts",
  "src/main.tsx",
  "src/vite-env.d.ts",
  "tests/__init__.py",
  "tests/index.test.ts",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
  "vite.config.ts",
]
`;

exports[`file list snapshots > python + cloudformation 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/template.yaml",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > python + terraform 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".tflint.hcl",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > python 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > react 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "index.html",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/App.css",
  "src/App.tsx",
  "src/index.ts",
  "src/main.tsx",
  "src/vite-env.d.ts",
  "tests/index.test.ts",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`file list snapshots > terraform (ts) 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".tflint.hcl",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > typescript + python 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/__init__.py",
  "tests/index.test.ts",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
]
`;

exports[`file list snapshots > typescript 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;
